@@ -42,8 +42,9 @@ Version 2.3.0
 * Tools
   + Command-line options for specifying flags now understand comma-separated
     lists of flag names (substrings).
-  + hwloc-info has new --local-memory --local-memoty-flags and --best-memattr
-    options for reporting local memory nodes and filtering by memory attributes.
+  + hwloc-info and hwloc-calc have new --local-memory --local-memory-flags
+    and --best-memattr options for reporting local memory nodes and filtering
+    by memory attributes.
   + hwloc-bind has a new --best-memattr option for filtering by memory attributes
     among the memory binding set.
   + Tools that have a --restrict option may now receive a nodeset or
